--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
             <h3>Publications</h3>
             <ul class="linklist colora">
                 <li>
+                    Choi M, Kim J, Kim H, <b>Tobin RJ</b>, Lee S. 
+                    <a href="https://doi.org/10.3390/v17070953">Multiscale modeling of hospital length of stay for successive SARS-CoV-2 variants: a multi-state forecasting framework.</a> 
+                    <i>Viruses.</i> (2025)
+                    <hr class="dottedhr"/>
+                </li>
+                <li>
                     <b>Tobin RJ</b>, Walker CR, Moss R, McCaw JM, Price DJ, Shearer FM. 
                     <a href="https://doi.org/10.1101/2024.10.13.24314968">A modular approach to forecasting COVID-19 hospital bed 
                     occupancy.</a> <i>medRxiv pre-print.</i> (2024)
