Add papers, add links

--- a/index.html
+++ b/index.html
@@ -32,58 +32,89 @@
             <hr/>
             <h3>Publications</h3>
             <ul class="linklist colora">
-                <li>
+<li>
+                    <div class="link_holder">
+                        [<a href="https://doi.org/10.3390/v17070953">HTML</a>]
+                    </div>
                     Choi M, Kim J, Kim H, <b>Tobin RJ</b>, Lee S. 
-                    <a href="https://doi.org/10.3390/v17070953">Multiscale modeling of hospital length of stay for successive SARS-CoV-2 variants: a multi-state forecasting framework.</a> 
+                    Multiscale modeling of hospital length of stay for successive SARS-CoV-2 variants: a multi-state forecasting framework.</a> 
                     <i>Viruses.</i> (2025)
                     <hr class="dottedhr"/>
                 </li>
                 <li>
+                    <div class="link_holder">
+                        [<a href="https://doi.org/1101/2024.10.13.24314968">HTML</a>]
+                        [<a href="/papers/clinical_forecasting.pdf">PDF</a>]
+                        [<a href="https://osf.io/5e6ma/">Supplementary Data</a>]
+                    </div>
                     <b>Tobin RJ</b>, Walker CR, Moss R, McCaw JM, Price DJ, Shearer FM. 
-                    <a href="https://doi.org/10.1101/2024.10.13.24314968">A modular approach to forecasting COVID-19 hospital bed 
-                    occupancy.</a> <i>medRxiv pre-print.</i> (2024)
+                    A modular approach to forecasting COVID-19 hospital bed 
+                    occupancy. <i>medRxiv pre-print.</i> (2024)
                     <hr class="dottedhr"/>
                 </li>
                 <li>
+                    <div class="link_holder">
+                        [<a href="https://doi.org/10.1371/journal.pntd.0011570">HTML</a>]
+                        [<a href="/papers/knowlesi_map.pdf">PDF</a>]
+                        [<a href="https://osf.io/k5bsa/">Supplementary Data</a>]
+                    </div>
                     <b>Tobin RJ</b>, Harrison LE, Tully M, Lubis IND, Noviyanti R, Anstey NM, Rajahram GS, Grigg M, 
-                    Flegg J, Price DJ, Shearer FM. <a href="https://doi.org/10.1371/journal.pntd.0011570">
+                    Flegg J, Price DJ, Shearer FM. 
                     Updating estimates of <i>Plasmodium knowlesi</i> malaria risk in response to changing land use patterns across 
-                    Southeast Asia.</a> <i>PLOS Neglected Tropical Diseases.</i> (2024)
+                    Southeast Asia. <i>PLOS Neglected Tropical Diseases.</i> (2024)
                     <hr class="dottedhr"/>
                 </li>
                 <li>
+                    <div class="link_holder">
+                        [<a href="https://doi.org/10.33321/cdi.2024.48.47">HTML</a>]
+                    </div>
                     Shearer FM, Edwards L, Kirk M, Eales O, Golding N, Hassall J, Liu B, Lydeamore M, Miller C, Moss R, Price DJ, Ryan GE, 
                     Sullivan S, <b>Tobin RJ</b>, Ward K, Kaldor J, Cheng AC, Wood J, McCaw JM. 
-                    <a href="https://doi.org/10.33321/cdi.2024.48.47">Opportunities to strengthen respiratory virus surveillance 
-                    systems in Australia: lessons learned from the COVID-19 response.</a> 
+                    Opportunities to strengthen respiratory virus surveillance 
+                    systems in Australia: lessons learned from the COVID-19 response. 
                     <i>Communicable Diseases Intelligence.</i> (2024)
                     <hr class="dottedhr"/>
                 </li>
                 <li>
+                    <div class="link_holder">
+                        [<a href="https://doi.org/10.1098/rsos.230641">HTML</a>]
+                    </div>
                     Harrison LE, Flegg J, <b>Tobin RJ</b>, Lubis IN, Noviyanti R, Grigg M, Shearer FM, Price DJ. 
-                    <a href="https://doi.org/10.1098/rsos.230641">A multicriteria framework for disease surveillance site 
-                    selection: case study for <i>Plasmodium knowlesi</i> malaria in Indonesia.</a> 
+                    A multicriteria framework for disease surveillance site 
+                    selection: case study for <i>Plasmodium knowlesi</i> malaria in Indonesia. 
                     <i>Royal Society Open Science.</i> (2024)
                     <hr class="dottedhr"/>
                 </li>
                 <li>
+                    <div class="link_holder">
+                        [<a href="https://doi.org/10.1186/s12879-024-09788-x">HTML</a>]
+                    </div>
                     Zachreson C, <b>Tobin RJ</b>, Walker CR, Conway E, Shearer FM, McVernon J, Geard N. 
-                    <a href="https://doi.org/10.1186/s12879-024-09788-x">A model-based assessment of social isolation practices for 
-                    COVID-19 outbreak response in residential care facilities.</a> 
+                    A model-based assessment of social isolation practices for 
+                    COVID-19 outbreak response in residential care facilities. 
                     <i>BMC Public Health.</i> (2024)
                     <hr class="dottedhr"/>
                 </li>
                 <li>
+                    <div class="link_holder">
+                        [<a href="https://doi.org/10.1186/s12879-022-07971-6">HTML</a>]
+                        [<a href="/papers/length_of_stay.pdf">PDF</a>]
+                        [<a href="https://doi.org/10">Supplementary Data</a>]
+                    </div>
                     <b>Tobin RJ</b>, Wood JG, Jayasundara D, Sara G, Walker CR, Martin GE, McCaw JM, Shearer FM, Price DJ. 
-                    <a href="https://doi.org/10.1186/s12879-022-07971-6">Real-time analysis of hospital length of stay in a mixed SARS-CoV-2 Omicron and Delta epidemic in New South Wales, Australia</a> 
+                    Real-time analysis of hospital length of stay in a mixed SARS-CoV-2 Omicron and Delta epidemic in New South Wales, Australia. 
                     <i>BMC Infectious Diseases.</i> (2023)
                     <hr class="dottedhr"/>
                 </li>
                 <li>
+                    <div class="link_holder">
+                        [<a href="https://doi.org/10.1016/j.vaccine.2023.09.025">HTML</a>]
+                    </div>
                     Zachreson C, <b>Tobin RJ</b>, Szanyi J, Walker CR, Cromer D, Shearer FM, Conway E, Ryan G, Cheng A, McCaw JM, Geard N. 
-                    <a href="https://doi.org/10.1016/j.vaccine.2023.09.025">Individual variation in vaccine immune response can 
-                    produce bimodal distributions of protection.</a> 
+                    Individual variation in vaccine immune response can 
+                    produce bimodal distributions of protection. 
                     <i>Vaccine.</i> (2023)
+                    <hr class="dottedhr"/>
                 </li>
             </ul>
         </div>
