--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
             <hr/>
             <h3>Publications</h3>
             <ul class="linklist colora">
-<li>
+                <li>
+                    <hr class="dottedhr"/>
                     <div class="link_holder">
                         [<a href="https://doi.org/10.3390/v17070953">HTML</a>]
                     </div>
+                    <hr class="paper_divider">
                     Choi M, Kim J, Kim H, <b>Tobin RJ</b>, Lee S. 
                     Multiscale modeling of hospital length of stay for successive SARS-CoV-2 variants: a multi-state forecasting framework.</a> 
                     <i>Viruses.</i> (2025)
@@ -47,6 +49,7 @@
                         [<a href="/papers/clinical_forecasting.pdf">PDF</a>]
                         [<a href="https://osf.io/5e6ma/">Supplementary Data</a>]
                     </div>
+                    <hr class="paper_divider">
                     <b>Tobin RJ</b>, Walker CR, Moss R, McCaw JM, Price DJ, Shearer FM. 
                     A modular approach to forecasting COVID-19 hospital bed 
                     occupancy. <i>medRxiv pre-print.</i> (2024)
@@ -58,6 +61,7 @@
                         [<a href="/papers/knowlesi_map.pdf">PDF</a>]
                         [<a href="https://osf.io/k5bsa/">Supplementary Data</a>]
                     </div>
+                    <hr class="paper_divider">
                     <b>Tobin RJ</b>, Harrison LE, Tully M, Lubis IND, Noviyanti R, Anstey NM, Rajahram GS, Grigg M, 
                     Flegg J, Price DJ, Shearer FM. 
                     Updating estimates of <i>Plasmodium knowlesi</i> malaria risk in response to changing land use patterns across 
@@ -68,6 +72,7 @@
                     <div class="link_holder">
                         [<a href="https://doi.org/10.33321/cdi.2024.48.47">HTML</a>]
                     </div>
+                    <hr class="paper_divider">
                     Shearer FM, Edwards L, Kirk M, Eales O, Golding N, Hassall J, Liu B, Lydeamore M, Miller C, Moss R, Price DJ, Ryan GE, 
                     Sullivan S, <b>Tobin RJ</b>, Ward K, Kaldor J, Cheng AC, Wood J, McCaw JM. 
                     Opportunities to strengthen respiratory virus surveillance 
@@ -79,6 +84,7 @@
                     <div class="link_holder">
                         [<a href="https://doi.org/10.1098/rsos.230641">HTML</a>]
                     </div>
+                    <hr class="paper_divider">
                     Harrison LE, Flegg J, <b>Tobin RJ</b>, Lubis IN, Noviyanti R, Grigg M, Shearer FM, Price DJ. 
                     A multicriteria framework for disease surveillance site 
                     selection: case study for <i>Plasmodium knowlesi</i> malaria in Indonesia. 
@@ -89,6 +95,7 @@
                     <div class="link_holder">
                         [<a href="https://doi.org/10.1186/s12879-024-09788-x">HTML</a>]
                     </div>
+                    <hr class="paper_divider">
                     Zachreson C, <b>Tobin RJ</b>, Walker CR, Conway E, Shearer FM, McVernon J, Geard N. 
                     A model-based assessment of social isolation practices for 
                     COVID-19 outbreak response in residential care facilities. 
@@ -101,6 +108,7 @@
                         [<a href="/papers/length_of_stay.pdf">PDF</a>]
                         [<a href="https://doi.org/10">Supplementary Data</a>]
                     </div>
+                    <hr class="paper_divider">
                     <b>Tobin RJ</b>, Wood JG, Jayasundara D, Sara G, Walker CR, Martin GE, McCaw JM, Shearer FM, Price DJ. 
                     Real-time analysis of hospital length of stay in a mixed SARS-CoV-2 Omicron and Delta epidemic in New South Wales, Australia. 
                     <i>BMC Infectious Diseases.</i> (2023)
@@ -110,6 +118,7 @@
                     <div class="link_holder">
                         [<a href="https://doi.org/10.1016/j.vaccine.2023.09.025">HTML</a>]
                     </div>
+                    <hr class="paper_divider">
                     Zachreson C, <b>Tobin RJ</b>, Szanyi J, Walker CR, Cromer D, Shearer FM, Conway E, Ryan G, Cheng A, McCaw JM, Geard N. 
                     Individual variation in vaccine immune response can 
                     produce bimodal distributions of protection. 
