Add github, remove supp

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                     <div class="link_holder">
                         [<a href="https://doi.org/1101/2024.10.13.24314968">HTML</a>]
                         [<a href="/papers/clinical_forecasting.pdf">PDF</a>]
-                        [<a href="https://osf.io/5e6ma/">Supplementary Data</a>]
+                        [<a href="https://github.com/ruarai/clinical_forecasting_paper">GitHub</a>]
+                        <!-- [<a href="https://osf.io/5e6ma/">Data</a>] -->
                     </div>
                     <hr class="paper_divider">
                     <b>Tobin RJ</b>, Walker CR, Moss R, McCaw JM, Price DJ, Shearer FM. 
@@ -59,7 +60,8 @@
                     <div class="link_holder">
                         [<a href="https://doi.org/10.1371/journal.pntd.0011570">HTML</a>]
                         [<a href="/papers/knowlesi_map.pdf">PDF</a>]
-                        [<a href="https://osf.io/k5bsa/">Supplementary Data</a>]
+                        [<a href="https://github.com/ruarai/pk_model">GitHub</a>]
+                        <!-- [<a href="https://osf.io/k5bsa/">Data</a>] -->
                     </div>
                     <hr class="paper_divider">
                     <b>Tobin RJ</b>, Harrison LE, Tully M, Lubis IND, Noviyanti R, Anstey NM, Rajahram GS, Grigg M, 
@@ -106,7 +108,8 @@
                     <div class="link_holder">
                         [<a href="https://doi.org/10.1186/s12879-022-07971-6">HTML</a>]
                         [<a href="/papers/length_of_stay.pdf">PDF</a>]
-                        [<a href="https://doi.org/10">Supplementary Data</a>]
+                        [<a href="https://github.com/ruarai/los_analysis_competing_risks">GitHub</a>]
+                        <!-- [<a href="https://doi.org/10">Supplementary Data</a>] -->
                     </div>
                     <hr class="paper_divider">
                     <b>Tobin RJ</b>, Wood JG, Jayasundara D, Sara G, Walker CR, Martin GE, McCaw JM, Shearer FM, Price DJ. 
