add  target="_blank"

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <hr/>
             <p>
                 My publications can be found below, or on 
-                <a href="https://scholar.google.com/citations?user=-LuRj_IAAAAJ">Google Scholar</a>.
+                <a href="https://scholar.google.com/citations?user=-LuRj_IAAAAJ" target="_blank">Google Scholar</a>.
                 <!-- I also publish my code on 
                 <a href="http://www.github.com/ruarai"> GitHub</a>. -->
             </p>
@@ -45,9 +45,9 @@
                 </li>
                 <li>
                     <div class="link_holder">
-                        [<a href="https://doi.org/1101/2024.10.13.24314968">HTML</a>]
-                        [<a href="/papers/clinical_forecasting.pdf">PDF</a>]
-                        [<a href="https://github.com/ruarai/clinical_forecasting_paper">GitHub</a>]
+                        [<a href="https://doi.org/1101/2024.10.13.24314968" target="_blank">HTML</a>]
+                        [<a href="/papers/clinical_forecasting.pdf" target="_blank">PDF</a>]
+                        [<a href="https://github.com/ruarai/clinical_forecasting_paper" target="_blank">GitHub</a>]
                         <!-- [<a href="https://osf.io/5e6ma/">Data</a>] -->
                     </div>
                     <hr class="paper_divider">
@@ -58,9 +58,9 @@
                 </li>
                 <li>
                     <div class="link_holder">
-                        [<a href="https://doi.org/10.1371/journal.pntd.0011570">HTML</a>]
-                        [<a href="/papers/knowlesi_map.pdf">PDF</a>]
-                        [<a href="https://github.com/ruarai/pk_model">GitHub</a>]
+                        [<a href="https://doi.org/10.1371/journal.pntd.0011570" target="_blank">HTML</a>]
+                        [<a href="/papers/knowlesi_map.pdf" target="_blank">PDF</a>]
+                        [<a href="https://github.com/ruarai/pk_model" target="_blank">GitHub</a>]
                         <!-- [<a href="https://osf.io/k5bsa/">Data</a>] -->
                     </div>
                     <hr class="paper_divider">
@@ -72,7 +72,7 @@
                 </li>
                 <li>
                     <div class="link_holder">
-                        [<a href="https://doi.org/10.33321/cdi.2024.48.47">HTML</a>]
+                        [<a href="https://doi.org/10.33321/cdi.2024.48.47" target="_blank">HTML</a>]
                     </div>
                     <hr class="paper_divider">
                     Shearer FM, Edwards L, Kirk M, Eales O, Golding N, Hassall J, Liu B, Lydeamore M, Miller C, Moss R, Price DJ, Ryan GE, 
@@ -84,7 +84,7 @@
                 </li>
                 <li>
                     <div class="link_holder">
-                        [<a href="https://doi.org/10.1098/rsos.230641">HTML</a>]
+                        [<a href="https://doi.org/10.1098/rsos.230641" target="_blank">HTML</a>]
                     </div>
                     <hr class="paper_divider">
                     Harrison LE, Flegg J, <b>Tobin RJ</b>, Lubis IN, Noviyanti R, Grigg M, Shearer FM, Price DJ. 
@@ -95,7 +95,7 @@
                 </li>
                 <li>
                     <div class="link_holder">
-                        [<a href="https://doi.org/10.1186/s12879-024-09788-x">HTML</a>]
+                        [<a href="https://doi.org/10.1186/s12879-024-09788-x" target="_blank">HTML</a>]
                     </div>
                     <hr class="paper_divider">
                     Zachreson C, <b>Tobin RJ</b>, Walker CR, Conway E, Shearer FM, McVernon J, Geard N. 
@@ -106,9 +106,9 @@
                 </li>
                 <li>
                     <div class="link_holder">
-                        [<a href="https://doi.org/10.1186/s12879-022-07971-6">HTML</a>]
-                        [<a href="/papers/length_of_stay.pdf">PDF</a>]
-                        [<a href="https://github.com/ruarai/los_analysis_competing_risks">GitHub</a>]
+                        [<a href="https://doi.org/10.1186/s12879-022-07971-6" target="_blank">HTML</a>]
+                        [<a href="/papers/length_of_stay.pdf" target="_blank">PDF</a>]
+                        [<a href="https://github.com/ruarai/los_analysis_competing_risks" target="_blank">GitHub</a>]
                         <!-- [<a href="https://doi.org/10">Supplementary Data</a>] -->
                     </div>
                     <hr class="paper_divider">
@@ -119,7 +119,7 @@
                 </li>
                 <li>
                     <div class="link_holder">
-                        [<a href="https://doi.org/10.1016/j.vaccine.2023.09.025">HTML</a>]
+                        [<a href="https://doi.org/10.1016/j.vaccine.2023.09.025" target="_blank">HTML</a>]
                     </div>
                     <hr class="paper_divider">
                     Zachreson C, <b>Tobin RJ</b>, Szanyi J, Walker CR, Cromer D, Shearer FM, Conway E, Ryan G, Cheng A, McCaw JM, Geard N. 
