Add last  target="_blank"

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li>
                     <hr class="dottedhr"/>
                     <div class="link_holder">
-                        [<a href="https://doi.org/10.3390/v17070953">HTML</a>]
+                        [<a href="https://doi.org/10.3390/v17070953" target="_blank">HTML</a>]
                     </div>
                     <hr class="paper_divider">
                     Choi M, Kim J, Kim H, <b>Tobin RJ</b>, Lee S. 
