--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="content">
             <h2>Ruarai Tobin</h2>
             <p>
-                I'm a PhD candidate in infectious disease modelling in the Infectious Disease Dynamics Unit at the University of Melbourne. My PhD is focused on integrating the complexities of the adaptive immune response into respiratory virus transmission models.
+                I'm a PhD candidate in infectious disease modelling in the Infectious Disease Dynamics Unit at the University of Melbourne. My PhD is focused on integrating the complexities of the adaptive immune response into models of respiratory virus transmission.
             </p>
             <hr/>
             <p>
@@ -26,8 +26,6 @@
             <p>
                 My publications can be found below, or on 
                 <a href="https://scholar.google.com/citations?user=-LuRj_IAAAAJ" target="_blank">Google Scholar</a>.
-                <!-- I also publish my code on 
-                <a href="http://www.github.com/ruarai"> GitHub</a>. -->
             </p>
             <hr/>
             <h3>Publications</h3>
@@ -53,7 +51,7 @@
                     <hr class="paper_divider">
                     <b>Tobin RJ</b>, Walker CR, Moss R, McCaw JM, Price DJ, Shearer FM. 
                     A modular approach to forecasting COVID-19 hospital bed 
-                    occupancy. <i>medRxiv pre-print.</i> (2024)
+                    occupancy. <i>Communications Medicine (accepted).</i> (2024)
                     <hr class="dottedhr"/>
                 </li>
                 <li>
@@ -126,7 +124,7 @@
                     Individual variation in vaccine immune response can 
                     produce bimodal distributions of protection. 
                     <i>Vaccine.</i> (2023)
-                    <hr class="dottedhr"/>
+                    <hr>
                 </li>
             </ul>
         </div>
