--- a/index.html
+++ b/index.html
@@ -30,20 +30,10 @@
             <hr/>
             <h3>Publications</h3>
             <ul class="linklist colora">
-                <li>
-                    <hr class="dottedhr"/>
-                    <div class="link_holder">
-                        [<a href="https://doi.org/10.3390/v17070953" target="_blank">HTML</a>]
-                    </div>
-                    <hr class="paper_divider">
-                    Choi M, Kim J, Kim H, <b>Tobin RJ</b>, Lee S. 
-                    Multiscale modeling of hospital length of stay for successive SARS-CoV-2 variants: a multi-state forecasting framework.</a> 
-                    <i>Viruses.</i> (2025)
-                    <hr class="dottedhr"/>
-                </li>
+                <hr class="dottedhr"/>
                 <li>
                     <div class="link_holder">
-                        [<a href="https://doi.org/1101/2024.10.13.24314968" target="_blank">HTML</a>]
+                        [<a href="https://doi.org/10.1038/s43856-025-01086-0" target="_blank">HTML</a>]
                         [<a href="/papers/clinical_forecasting.pdf" target="_blank">PDF</a>]
                         [<a href="https://github.com/ruarai/clinical_forecasting_paper" target="_blank">GitHub</a>]
                         <!-- [<a href="https://osf.io/5e6ma/">Data</a>] -->
@@ -51,7 +41,17 @@
                     <hr class="paper_divider">
                     <b>Tobin RJ</b>, Walker CR, Moss R, McCaw JM, Price DJ, Shearer FM. 
                     A modular approach to forecasting COVID-19 hospital bed 
-                    occupancy. <i>Communications Medicine (accepted).</i> (2024)
+                    occupancy. <i>Communications Medicine</i> (2025)
+                    <hr class="dottedhr"/>
+                </li>
+                <li>
+                    <div class="link_holder">
+                        [<a href="https://doi.org/10.3390/v17070953" target="_blank">HTML</a>]
+                    </div>
+                    <hr class="paper_divider">
+                    Choi M, Kim J, Kim H, <b>Tobin RJ</b>, Lee S. 
+                    Multiscale modeling of hospital length of stay for successive SARS-CoV-2 variants: a multi-state forecasting framework.</a> 
+                    <i>Viruses.</i> (2025)
                     <hr class="dottedhr"/>
                 </li>
                 <li>
