Add paper, prompt for conversion

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
                 <hr class="dottedhr"/>
                 <li>
                     <div class="link_holder">
+                        [<a href="https://doi.org/10.1101/2025.09.10.25335544" target="_blank">HTML</a>]
+                        </div>
+                    <hr class="paper_divider">
+                    Moss R, <b>Tobin RJ</b>, O'Hara-Wild M, Adekunle AI, Liu D, South T, Morris DJ, Ryan GE, Hao T, Babu A, Senior KL, Wood JG, Golding N, Ross JV, Dawson P, Hyndman RJ, Price DJ, McCaw JM, Shearer FM. Ensemble forecasts of COVID-19 activity to support Australia's pandemic response: 2020–22. <i>medRxiv pre-print</i> (2025)
+                    <hr class="dottedhr"/>
+                </li>
+                <li>
+                    <div class="link_holder">
                         [<a href="https://doi.org/10.1038/s43856-025-01086-0" target="_blank">HTML</a>]
                         [<a href="/papers/clinical_forecasting.pdf" target="_blank">PDF</a>]
                         [<a href="https://github.com/ruarai/clinical_forecasting_paper" target="_blank">GitHub</a>]
