--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
         <div class="content">
             <h2>Ruarai Tobin</h2>
             <p>
-                I'm a PhD candidate in infectious disease modelling in the Infectious Disease Dynamics Unit at the University of Melbourne. My PhD is focused on integrating the complexities of the adaptive immune response into models of respiratory virus transmission.
+                I'm a PhD candidate in infectious disease modelling in the 
+                <a href = "https://mspgh.unimelb.edu.au/research-groups/centre-for-epidemiology-and-biostatistics-research/infectious-disease-dynamics" target="_blank">Infectious Disease Dynamics Unit</a>
+                at the University of Melbourne. My PhD is focused on integrating the complexities of the adaptive immune response into models of respiratory virus transmission.
             </p>
             <hr/>
             <p>
-                Prior to the commencement of my PhD, I worked on modelling <i>Plasmodium knowlesi</i> malaria risk in Asia and supporting Australia's public health response to the COVID-19 pandemic.
+                Prior to the commencement of my PhD, I worked on modelling <i>Plasmodium knowlesi</i> malaria risk in Southeast Asia and supporting Australia's public health response to the COVID-19 pandemic.
             </p>
             <hr/>
             <p>
@@ -31,6 +33,16 @@
             <h3>Publications</h3>
             <ul class="linklist colora">
                 <hr class="dottedhr"/>
+                <li>
+                    <div class="link_holder">
+                        [<a href="https://arxiv.org/abs/2511.15070" target="_blank">HTML</a>]
+                        [<a href="/papers/single_strain_immunity_structured.pdf" target="_blank">PDF</a>]
+                        [<a href="https://github.com/ruarai/ode_immunity" target="_blank">GitHub</a>]
+                        </div>
+                    <hr class="paper_divider">
+                    <b>Tobin RJ</b>, McCaw JM, Shearer FM. The role of antibody-mediated immunity in shaping the seasonality of respiratory viruses <i>arXiv pre-print</i> (2025)
+                    <hr class="dottedhr"/>
+                </li>
                 <li>
                     <div class="link_holder">
                         [<a href="https://doi.org/10.1101/2025.09.10.25335544" target="_blank">HTML</a>]
